--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'android-apt'
 
 android {
     compileSdkVersion 24
@@ -32,6 +33,9 @@ dependencies {
 
     //    compile 'com.google.android.exoplayer:exoplayer:r2.0.4'
     compile 'com.github.bumptech.glide:glide:3.5.2'
+
+    compile 'com.airbnb.android:epoxy:1.5.0'
+    apt 'com.airbnb.android:epoxy-processor:1.5.0'
 
     compile project(':library')
 
